--- a/Case Study 1.html
+++ b/Case Study 1.html
@@ -14690,7 +14690,7 @@ Moreno has set a clear goal: Design marketing strategies aimed at converting cas
 2) Unzip the files
 3) Create a folder on your desktop or Drive to house the file and use appropriate file-naming conventions</p>
 <p>We decide to use 12 months of data from June 2021 to May 2022.</p>
-<p>Download the data from this <a href="https://divvy-tripdata.s3.amazonaws.com/index.html">public dataset</a> made available by Motivate International Inc. under this <a href="https://ride.divvybikes.com/data-license-agreement">license</a></p>
+<p>Download the data from this <a href="https://divvy-tripdata.s3.amazonaws.com/index.html" target="_blank">public dataset</a> made available by Motivate International Inc. under this <a href="https://ride.divvybikes.com/data-license-agreement" target="_blank">license</a></p>
 
 </div>
 </div>
