--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Vishal Sarvand<br />
 						Portfolio</h1>
-						<p>Thorough and meticulous aspiring Data Analyst passionate about data driven decision-making to help businesses</p>
+						<p>This portfolio website is work in progress and not finalized so you may see place holders instead of actual projects</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
