--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+
 <html>
 	<head>
 		<title>Vishal Sarvand's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/disp/945b0225337909.563440870421b.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -35,6 +38,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/vishsar/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/VishalSar" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://public.tableau.com/app/profile/vishal.sarvand" target="_blank" class="icon brands fa-tableau"><span class="iconify" data-icon="ion:logo-tableau"></span></a></li>
 						</ul>
 					</nav>
 
@@ -60,24 +64,24 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project<br />
-										Two</a></h2>
+										<h2><a href="https://github.com/VishalSar/PortfolioProjects/blob/main/1_SQL%20scriptiong%20with%20Covid%20data.sql" target="_blank">COVID 19 Data<br />
+										SQL Exploration</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/covidworld.jpeg" alt="" /></a>
+									<p>Part 1 Data exploration for global Covid 19 data in SQL server using <a href="https://ourworldindata.org/covid-deaths" target="_blank">'Our World in Data'</a> dataset</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/VishalSar/PortfolioProjects/blob/main/1_SQL%20scriptiong%20with%20Covid%20data.sql" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project<br />
-										Three</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/vishal.sarvand/viz/CovidDashboard_16549624344270/Dashboard1" target="_blank">COVID 19<br />
+										Tableau Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/covidDashboard.png" alt="" /></a>
+									<p>Part 2: Visualizing few details of the global Covid 19 data using Tableau Public Dashboard</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/vishal.sarvand/viz/CovidDashboard_16549624344270/Dashboard1" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
