--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Vishal Sarvand<br />
-						Portfolio</h1>
-						<p>This portfolio website is work in progress and not finalized so you may see place holders instead of actual projects</p>
+						<h1>Vishal Sarvand</h1>
+						<h2> Data Analyst </h2>
+						<p>A central access for Data Analytics projects I've been working on</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
